# anytype-client

./: AGENTS.md  Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml
docs/: cli-commands.md  development.md
skills/anyclient/: SKILL.md
src/: cli.rs  client.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  output.rs
src/api/: auth.rs  client.rs  files.rs  lists.rs  members.rs  mod.rs  objects.rs  properties.rs  search.rs  spaces.rs  tags.rs  types.rs
src/commands/: auth.rs  collections.rs  files.rs  filter_parsing.rs  lists.rs  members.rs  mod.rs  objects.rs  properties.rs  property_values.rs  search.rs  spaces.rs  tags.rs  types.rs
src/models/: auth.rs  common.rs  files.rs  filters.rs  lists.rs  members.rs  mod.rs  objects.rs  properties.rs  search.rs  spaces.rs  types.rs
src/services/: mod.rs  objects.rs  property_resolution.rs  search.rs  space_resolution.rs  tag_resolution.rs
src/services/objects/: counts.rs
tests/: api_http_requests.rs  cli_smoke.rs  legacy_compatibility.rs  model_serde.rs  output_rendering.rs  request_serialization.rs
