[package]
name = "anyclient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tabled = "0.20"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
url = "2.5"
